--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id 'com.google.gms.google-services'
     id 'kotlin-kapt'
     id 'com.google.dagger.hilt.android'
+    id 'androidx.navigation.safeargs.kotlin'
 }
 
 android {
@@ -40,8 +41,6 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.core:core-ktx:+'
-    def nav_version = "2.5.3"
     def hilt_version = "2.45"
     implementation 'com.google.firebase:firebase-auth-ktx:21.1.0'
 
