--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,9 @@
 buildscript {
     ext {
-        kotlin_version = '1.8.21'
+        nav_version = "2.5.3"
     }
     dependencies {
         classpath 'com.google.gms:google-services:4.3.14'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-    }
-    repositories {
-        mavenCentral()
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
@@ -15,4 +11,5 @@ plugins {
     id 'com.android.library' version '7.4.2' apply false
     id 'org.jetbrains.kotlin.android' version '1.8.21' apply false
     id 'com.google.dagger.hilt.android' version '2.45' apply false
+    id 'androidx.navigation.safeargs.kotlin' version "$nav_version" apply false
 }
