--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ android {
 }
 
 dependencies {
+    implementation 'com.google.firebase:firebase-firestore-ktx:24.4.1'
     def hilt_version = "2.45"
     implementation 'com.google.firebase:firebase-auth-ktx:21.1.0'
 
